--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: Jagannathan Laboratory
 subtitle: Univerity of Colorado, Anschutz Medical Campus, Denver CO
-use-site-title: true
+use-site-title: false
 ---
 
 <div class="posts-list">
