--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Jagannathan Laboratory
-subtitle: Univerity of Colorado, Anschutz Medical Campus, Denver CO
+# title: Jagannathan Laboratory
+# subtitle: Univerity of Colorado, Anschutz Medical Campus, Denver CO
 use-site-title: false
 ---
 
