--- a/_pages/people/index.html
+++ b/_pages/people/index.html
@@ -1,1 +1,10 @@
-
+---
+layout: default
+title: people
+permalink: _pages/people/index.html
+---
+{% for item in site.people %}
+  <h2>{{ item.title }}</h2>
+  <p>{{ item.description }}</p>
+  <p><a href="{{ item.url }}">{{ item.title }}</a></p>
+{% endfor %}
