--- a/people.html
+++ b/people.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: people
-permalink: /people/index.html
+permalink: /_pages/people/index.html
 ---
 {% for item in site.people %}
   <h2>{{ item.title }}</h2>
